<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBgColor"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <!-- password -->
            <TextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:minLines="2"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@id/refreshButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- refresh icon -->
            <ImageView
                android:id="@+id/refreshButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/refresh"
                android:focusable="true"
                android:onClick="refreshClicked"
                android:src="@drawable/refresh_icon"
                app:layout_constraintBottom_toBottomOf="@id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/password"
                app:layout_constraintVertical_bias="0.0" />

            <!-- copy section -->
            <LinearLayout
                android:id="@+id/copySection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_design"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:onClick="copyClicked"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@id/verticalCenterGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:clickable="false"
                    android:contentDescription="@string/copy"
                    android:focusable="false"
                    android:src="@drawable/copy_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/copy"
                    android:textColor="@color/primaryTextOnPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- save section -->
            <LinearLayout
                android:id="@+id/saveSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_design"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:onClick="saveClicked"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@id/copySection"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/verticalCenterGuideline"
                app:layout_constraintTop_toTopOf="@id/copySection">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:clickable="false"
                    android:contentDescription="@string/save"
                    android:focusable="false"
                    android:src="@drawable/save_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/save"
                    android:textColor="@color/primaryTextOnPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalCenterGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/controlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="controlToggleClicked"
                android:text="@string/controls"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/copySection" />

            <ImageView
                android:id="@+id/controlIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/controls"
                android:focusable="true"
                android:onClick="controlToggleClicked"
                android:src="@drawable/settings_icon"
                android:tint="@color/secondaryTextColor"
                app:layout_constraintBottom_toBottomOf="@id/controlText"
                app:layout_constraintStart_toEndOf="@id/controlText"
                app:layout_constraintTop_toTopOf="@id/controlText" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/controlText">

                <TextView
                    android:id="@+id/passwordLengthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/passwordLength"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/passwordLength"
                    app:layout_constraintVertical_bias="0.0" />

                <SeekBar
                    android:id="@+id/passwordLength"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="45"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:progress="3"
                    app:layout_constraintEnd_toStartOf="@id/passwordLengthCount"
                    app:layout_constraintStart_toEndOf="@id/passwordLengthText"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/passwordLengthCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initialLength"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/passwordLength"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/passwordLength" />

                <CheckBox
                    android:id="@+id/uppercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="uppercaseClicked"
                    android:text="@string/uppercase"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordLength" />

                <CheckBox
                    android:id="@+id/lowercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="lowercaseClicked"
                    android:text="@string/lowercase"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/uppercase" />

                <CheckBox
                    android:id="@+id/numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="numbersClicked"
                    android:text="@string/numbers"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lowercase" />

                <CheckBox
                    android:id="@+id/symbols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="symbolsClicked"
                    android:text="@string/symbols"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/numbers" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>